--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -7,16 +7,17 @@ on:
     branches: ["deploy"]
 
 jobs:
-  build:
-    runs-on: self-hosted
-
+  test:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install all the dependencies
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm run test
+          node-version: 18
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
+          
