Testing workflow skip [skip ci]

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -4,6 +4,12 @@ on:
   pull_request:
     types: ["opened"]
   workflow_dispatch:
+  push:
+    branches:
+      - "deploy"
+    paths-ignore:
+      - ".github/workflows/*"
+  
 
 jobs:
   test:
