--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
-          path: dist
+          path: ./build
 
       - name: Deploy
         run: echo "Deploying"
