--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -43,11 +43,12 @@ jobs:
         run: npm install
       - name: Build Project
         run: npm run build
+      - name: List files
+        run: ls -l ${{ github.workspace }}
       - name: upload the Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: dist-files
           path: ${{ github.workspace }}
-
       - name: Deploy
         run: echo "Deploying"
