--- a/.github/workflows/jobs-artifact.yaml
+++ b/.github/workflows/jobs-artifact.yaml
@@ -33,8 +33,13 @@ jobs:
         run: npm ci
       - name: Build Project
         run: npm run build
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+      - name: List files
+        run: ls -l ${{ github.workspace }}
+      - name: upload the Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist-files
+          path: build
   deploy:
     needs: build
     runs-on: ubuntu-latest
