--- a/.github/workflows/jobs-artifact.yaml
+++ b/.github/workflows/jobs-artifact.yaml
@@ -31,6 +31,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          #The key can be used to retreive the cache
+          key: deps-node-modules-${{ hashFiles('**/package.lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Build Project
