--- a/.github/workflows/jobs-artifact.yaml
+++ b/.github/workflows/jobs-artifact.yaml
@@ -25,7 +25,7 @@ jobs:
           #The key can be used to retreive the cache
           key: deps-node-modules-${{ hashFiles('**/package.lock.json') }}
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Run tests
         run: npm test
   build:
