--- a/.github/workflows/jobs-artifact.yaml
+++ b/.github/workflows/jobs-artifact.yaml
@@ -23,7 +23,7 @@ jobs:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
           #The key can be used to retreive the cache
-          key: deps-node-modules-${{ hashFiles('**/package.lock.json') }}
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Run tests
