Added travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,4 @@ before_install:
 
 script:
   - ls
-  - $TRAVIS_TEST_RESULT
-  - docker run ajayakce/devops npm run test -- --coverage
-  - $TRAVIS_TEST_RESULT
+  - docker run ajayakce/devops npm run test
