--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
 
 script:
   - ls
-  - docker run -e ajayakce/devops npm run test -- --coverage
+  - docker run -e ajayakce/devops npm run test
